Tweak package name

--- a/examples/notebooks/0_Exploratory_Data_Analysis.ipynb
+++ b/examples/notebooks/0_Exploratory_Data_Analysis.ipynb
@@ -35,6 +35,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b2ba31a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install from github repo\n",
+    "!pip "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "000bd117",
    "metadata": {},
