Add DBSCAN example

--- a/examples/notebooks/0_Exploratory_Data_Analysis.ipynb
+++ b/examples/notebooks/0_Exploratory_Data_Analysis.ipynb
@@ -18,31 +18,12 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "import uproot\n",
     "import numpy as np\n",
-    "import sys\n",
     "import os\n",
-    "from sklearn.cluster import DBSCAN, HDBSCAN\n",
-    "from sklearn.metrics import homogeneity_completeness_v_measure\n",
-    "from sklearn.metrics.cluster import contingency_matrix\n",
-    "from sklearn.metrics.cluster import entropy\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from epic_clustering.utils import plot_clusters, get_cluster_pos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b2ba31a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pip install from github repo\n",
-    "!pip "
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
