Simplify Member Classifier and tweak notebook

--- a/examples/notebooks/member_classification.ipynb
+++ b/examples/notebooks/member_classification.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from epic_clustering.utils import plot_clusters, get_cluster_pos\n",
-    "from epic_clustering.models import MetricLearning"
+    "from epic_clustering.models import MemberClassification"
    ]
   },
   {
@@ -359,75 +359,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "30bfe7fd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 609,    0],\n",
-       "        [ 609,    1],\n",
-       "        [ 609,    2],\n",
-       "        ...,\n",
-       "        [1373, 1892],\n",
-       "        [1373, 1893],\n",
-       "        [1373, 1894]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([75800, 2])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pairs.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d5caf4e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "bc5cd2cc",
    "metadata": {},
@@ -609,9 +540,9 @@
     }
    ],
    "source": [
-    "with open(\"metric_learning_config.yaml\", \"r\") as f:\n",
-    "    metric_learning_config = yaml.safe_load(f)\n",
-    "model = MetricLearning(metric_learning_config)\n",
+    "with open(\"member_classification.yaml\") as f:\n",
+    "    member_classification_config = yaml.safe_load(f)\n",
+    "model = MemberClassification(member_classification_config)\n",
     "model.setup(stage=\"fit\")"
    ]
   },
@@ -908,7 +839,7 @@
     }
    ],
    "source": [
-    "logger = WandbLogger(project=metric_learning_config[\"project\"])\n",
+    "logger = WandbLogger(project=member_classification_config[\"project\"])\n",
     "trainer = pl.Trainer(devices=1, accelerator=\"gpu\", max_epochs=100, logger=logger)\n",
     "trainer.fit(model)"
    ]
