--- a/examples/notebooks/dbscan_with_hough.ipynb
+++ b/examples/notebooks/dbscan_with_hough.ipynb
@@ -26,7 +26,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e5479a06",
    "metadata": {},
@@ -44,7 +43,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a9437ed8",
    "metadata": {},
@@ -331,7 +329,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b2cac0dd",
    "metadata": {},
@@ -373,7 +370,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a2f706ac",
    "metadata": {},
@@ -382,7 +378,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e31be628",
    "metadata": {},
@@ -475,7 +470,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d647322d",
    "metadata": {},
@@ -635,7 +629,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "381ea911",
    "metadata": {},
@@ -702,7 +695,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0b1fc517",
    "metadata": {},
@@ -711,7 +703,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8b24be78",
    "metadata": {},
@@ -772,7 +763,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6c142443",
    "metadata": {},
@@ -1138,7 +1128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "95e4e0e7",
    "metadata": {},
@@ -1259,7 +1248,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1330395a",
    "metadata": {},
@@ -2367,7 +2355,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c08eb6c5",
    "metadata": {},
@@ -3113,7 +3100,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e752cdad",
    "metadata": {},
@@ -3244,7 +3230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4ca767a5",
    "metadata": {},
@@ -3259,11 +3244,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hough_transform import hough_transform, normalize_points"
+    "from epic_clustering.utils import hough_transform, normalize_points"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "327f4684",
    "metadata": {},
@@ -3487,7 +3471,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bba325c8",
    "metadata": {},
